# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
docs/: ROADMAP.md  TECHNICAL.md
src/: chip8.cpp  chip8.hpp  display.cpp  display.hpp  main.cpp  menu.cpp  menu.hpp
